--- a/DEMOMVC.WEB/CROM.GC.web.application/Web.config
+++ b/DEMOMVC.WEB/CROM.GC.web.application/Web.config
@@ -9,7 +9,7 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="cnxDEMO_MVC" connectionString="Data Source=LAP01-OCARRIL\SQLEXPRESSCROM;  Initial Catalog=BD_GC_DEMO;  User ID=sa; Password=uscrom77;Connect Timeout=1000;" providerName="System.Data.SqlClient" />
+    <add name="cnxDEMO_MVC" connectionString="Data Source=LAP01-OCARRIL\SQLEXPRESSCROM15;  Initial Catalog=BD_GC_DEMO;  User ID=sa; Password=uscrom77;Connect Timeout=1000;" providerName="System.Data.SqlClient" />
      </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,7 +20,7 @@
     <add key="DEFAULT_KEY_SYSTEM" value="42D834AA-D0ED-4889-9126-FC40F2DB86BB" />
     <!--PUBLICADO AZURE-->    
     <add key="DEFAULT_URL_WEBAPP_Comercial" value="http://localhost:8195/" />    
-    <add key="DEFAULT_URL_WS_API_Seguridad" value="http://analyticsocarril.azurewebsites.net/" />   
+    <add key="DEFAULT_URL_WS_API_Seguridad" value="http://analyticsocarril.azurewebsites.net/webapisis/" />   
     <add key="DEFAULT_LinkTipoCambio" value="https://e-consulta.sunat.gob.pe/cl-at-ittipcam/tcS01Alias" />
     <!-- OK - Valores del Acceso a segurdad-->
     <add key="DEFAULT_ServicioWEB" value="N" />
